--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://xijo.github.io
-title: My Octopress Blog
+title:
 subtitle: A blogging framework for hackers.
 author: Your Name
 simple_search: http://google.com/search
@@ -63,7 +63,7 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 # ----------------------- #
 
 # Github repositories
-github_user:
+github_user: xijo
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
