--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://xijo.github.io
-title:
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: ✗ijo
+subtitle:
+author: Johannes Opper
 simple_search: http://google.com/search
 description:
 
